<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.gorilabrothers.calculator.MainActivity"
    android:background="#de161616">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_weight="1"
            android:focusable="false"
            android:text="0"
            android:gravity="center_vertical|right"
            android:background="@drawable/field"
            android:paddingRight="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:id="@+id/buttonDelete"
            android:layout_weight="4"
            android:onClick="onButtonClick"
            android:background="@drawable/button_delete"
            android:textColor="@drawable/text_button_delete" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_7"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_7"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_8"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_8"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_9"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_9"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_divide"
                android:id="@+id/buttonDivide"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:background="@drawable/button_operation"
                android:textColor="@drawable/text_button_grey_lignt" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_4"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_4"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_5"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_5"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_6"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_6"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_multime"
                android:id="@+id/buttonMultime"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:background="@drawable/button_operation"
                android:textColor="@drawable/text_button_grey_lignt" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_1"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_1"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_2"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_2"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_3"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_3"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_minus"
                android:id="@+id/buttonMinus"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:background="@drawable/button_operation"
                android:textColor="@drawable/text_button_grey_lignt" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_point"
                android:id="@+id/buttonPoint"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_0"
                android:id="@+id/button0"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:contentDescription="@string/button_0"
                android:background="@drawable/button_all"
                android:textColor="@drawable/text_button_all" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_equals"
                android:id="@+id/buttonEquals"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:background="@drawable/button_equals"
                android:textColor="@drawable/text_button_equals" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/button_plus"
                android:id="@+id/buttonPlus"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:background="@drawable/button_operation"
                android:textColor="@drawable/text_button_grey_lignt" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
